--- a/200.html
+++ b/200.html
@@ -2,32 +2,32 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/your-repo-name/favicon.png" />
+		<link rel="icon" href="/itsrapid-pdp-writer-v2/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/your-repo-name/_app/immutable/entry/start.TcGPSqcn.js">
-		<link rel="modulepreload" href="/your-repo-name/_app/immutable/chunks/entry.C45euydx.js">
-		<link rel="modulepreload" href="/your-repo-name/_app/immutable/chunks/runtime.BXeHQR4r.js">
-		<link rel="modulepreload" href="/your-repo-name/_app/immutable/chunks/index-client.BVB-JWuD.js">
-		<link rel="modulepreload" href="/your-repo-name/_app/immutable/entry/app.DGkPN6fK.js">
-		<link rel="modulepreload" href="/your-repo-name/_app/immutable/chunks/render.5-4pPTFq.js">
-		<link rel="modulepreload" href="/your-repo-name/_app/immutable/chunks/disclose-version.2iI3aS7g.js">
-		<link rel="modulepreload" href="/your-repo-name/_app/immutable/chunks/props.DWtFO36s.js">
+		<link rel="modulepreload" href="/itsrapid-pdp-writer-v2/_app/immutable/entry/start.D4hQuMAm.js">
+		<link rel="modulepreload" href="/itsrapid-pdp-writer-v2/_app/immutable/chunks/entry.kCAWuGNL.js">
+		<link rel="modulepreload" href="/itsrapid-pdp-writer-v2/_app/immutable/chunks/runtime.BXeHQR4r.js">
+		<link rel="modulepreload" href="/itsrapid-pdp-writer-v2/_app/immutable/chunks/index-client.BVB-JWuD.js">
+		<link rel="modulepreload" href="/itsrapid-pdp-writer-v2/_app/immutable/entry/app.BMJu5WQi.js">
+		<link rel="modulepreload" href="/itsrapid-pdp-writer-v2/_app/immutable/chunks/render.5-4pPTFq.js">
+		<link rel="modulepreload" href="/itsrapid-pdp-writer-v2/_app/immutable/chunks/disclose-version.2iI3aS7g.js">
+		<link rel="modulepreload" href="/itsrapid-pdp-writer-v2/_app/immutable/chunks/props.DWtFO36s.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1mk4krj = {
-						base: "/your-repo-name",
-						assets: "/your-repo-name"
+					__sveltekit_352t6c = {
+						base: "/itsrapid-pdp-writer-v2",
+						assets: "/itsrapid-pdp-writer-v2"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/your-repo-name/_app/immutable/entry/start.TcGPSqcn.js"),
-						import("/your-repo-name/_app/immutable/entry/app.DGkPN6fK.js")
+						import("/itsrapid-pdp-writer-v2/_app/immutable/entry/start.D4hQuMAm.js"),
+						import("/itsrapid-pdp-writer-v2/_app/immutable/entry/app.BMJu5WQi.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
